[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/coin/gold_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/coin/gold_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/coin/gold_2.png" type="Texture" id=3]
[ext_resource path="res://coin.gd" type="Script" id=4]
[ext_resource path="res://Assets/sounds/powerUp2.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=5]
radius = 44.0454

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "spin",
"speed": 7.0
} ]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "bounce"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -187 ), Vector2( 0, -65 ) ]
}

[node name="coin" type="Area2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "spin"
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/bounce = SubResource( 7 )

[node name="SoundCoinCollected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 20.0

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
